@@ -41,7 +41,7 @@ CONFIG_ATAG_PHYS=0xc0000100
 #CONFIG_ARCH_NUMBER=
 CONFIG_ARCH_NUMBER_FUNCTION=determine_arch_number
 
-CONFIG_DRIVER_NOR=y
+CONFIG_DRIVER_NOR_CFI=y
 
 #CONFIG_ENV_AUTOBOOT=50
 CONFIG_ENV_REGION_KERNEL=nor:256k+1536k
